--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint": "prettier --plugin-search-dir . --check . && eslint .",
     "format": "prettier --plugin-search-dir . --write .",
     "typegen": "graphql-codegen --config typegen.ts",
-    "introspect": "drizzle-kit introspect:mysql --config=drizzle.config.ts",
+    "db:pull": "drizzle-kit introspect:mysql --config=drizzle.config.ts",
     "db:push": "drizzle-kit push:mysql --config=drizzle.config.ts",
     "studio": "drizzle-kit studio"
   },
