--- a/package.json
+++ b/package.json
@@ -50,9 +50,11 @@
     "@auth/drizzle-adapter": "^0.3.2",
     "@auth/sveltekit": "^0.3.6",
     "@planetscale/database": "^1.11.0",
+    "@tailwindcss/typography": "^0.5.10",
     "clsx": "^2.0.0",
     "drizzle-orm": "^0.28.5",
     "graphql": "^16.8.0",
-    "graphql-request": "^6.1.0"
+    "graphql-request": "^6.1.0",
+    "motion": "^10.16.2"
   }
 }
